fix cards overlapping the navbar

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -32,6 +32,7 @@ body {
   position: fixed;
   top: 0;
   width: 100%;
+  z-index: 1;
 }
 
 /*-------------------------------------------------------------intro----------------------------------------*/
